# megarepo

./: .gitignore  Cargo.toml  package.json  pnpm-lock.yaml  project.json
cli/: Cargo.toml
cli/src/: main.rs
io/src/: gitignore.rs  local_file.rs
src/: cmd.ts  gitignore.rs  gitops.ts  index.ts  main.rs  mega.rs  mod.ts  project.ts
src/__tests__/: configuration.test.ts
src/gitignore/: fileOps.rs
