# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]

members = [
    "cli",
    "io",
]

[workspace.package]
authors = ["Cody Averett"]
edition = "2022"
license = "MIT"
repository = "https://github.com/codyaverett/megarepo"

[workspace.dependencies]
